# ros2_puzzlebot_nav2_hexagon

./: README.md  package.xml  setup.cfg  setup.py
launch/: README.md  gazebo_world.launch.py  hexagonal_world.launch.py  mapping.launch.py  navigation.launch.py
map/: hexagonal_map.pgm  hexagonal_map.yaml  my_map.yaml  puzzlebot_map.pgm  puzzlebot_map.yaml
models/hexagonal_world/: model.config  model.sdf
param/: puzzlebot.yaml  slam_toolbox_config.yaml
urdf/mcr2_control/: gazebo_control.xacro
urdf/mcr2_robots/: puzzlebot_jetson_lidar_ed.xacro
urdf/mcr2_robots/jetson_lidar_ed/: parameters_jetson_lidar_ed.xacro
urdf/mcr2_sensors/: laser_camera_bracket.xacro  lidar.xacro
worlds/: hexagonal_world.world
